2000-10-01  Andrew MacLeod  <amacleod@redhat.com>

	* dwarf2out.c (loc_descriptor): use SUBREG_REG to get the register.
	* emit-rtl.c (gen_lowpart_common, gen_imagpart): Spacing nits.
	(gen_highpart, constant_subword, operand_subword): Spacing nits.
	* function.c (purge_single_hard_subreg_set): Correct last change, find
	correct offsets for subreg.
	* reload.c (push_reload): Replace missing clause.

2000-09-30  Andrew MacLeod  <amacleod@redhat.com>

	* function.c (purge_single_hard_subreg_set): Dont use SUBREG_WORD.
	* recog.c (validate_replace_rtx_1): Use SUBREG_BYTE.
	* reload.c (reload_inner_reg_of_subreg): SUBREG_REGNO should be used
	on the entire subreg rtx.
	* config/i960/i960.md (zero_extendqihi2): SUBREG's are byte offsets.
	* config/m68hc11/m68hc11.c (m68hc11_gen_lowpart): Don't use SUBREG_WORD.

2000-05-04  Jakub Jelinek  <jakub@redhat.com>

	* emit-rtl.c (gen_lowpart_common): Return inner SUBREG
	if it is lowpart SUBREG, not when SUBREG_BYTE is 0.

	* flow.c (mark_set_1): Remove ALTER_HARD_SUBREG. Use
	SUBREG_REGNO_OFFSET instead.
	* config/d30v/d30v.c (d30v_split_double): Use SUBREG_REGNO_OFFSET
	instead of SUBREG_WORD.
	(d30v_print_operand_memory_reference): Likewise.

	* ssa.c (coalesce_regs_in_copies): Use ! subreg_lowpart_p instead of
	checking SUBREG_WORD != 0.

	* cse.c (remove_invalid_subreg_refs): Change offset argument type to
	unsigned int.
	* ssa.c (rename_insn_1): Use subreg_lowpart_p instead of checking
	SUBREG_WORD == 0.
	(rename_equivalent_regs_in_insn): Likewise.
	* rtl.h (SUBREG_BYTE): Change to XCUINT from XCINT.
	* emit-rtl.c (subreg_hard_regno): Make byte_offset, base_regno and
	final_regno unsigned.
	(subreg_lowpart_p): Likewise with offset.
	(operand_subword): Likewise for partwords.

	* config/sparc/sparc.md (cmp_siqi_trunc, cmp_siqi_trunc_set,
	cmp_diqi_trunc, cmp_diqi_trunc_set, lshrdi3_v8plus+1,
	lshrdi3_v8plus+2, lshrdi3_v8plus+3, lshrdi3_v8plus+4): Use proper
	SUBREG_BYTE offset for non-paradoxical subregs in patterns.
